--- a/package.json
+++ b/package.json
@@ -14,9 +14,20 @@
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
     "typescript": "^4.1.3",
-    "web-vitals": "^0.2.4"
+    "web-vitals": "^0.2.4",
+    "bootstrap": "4.3.1",
+    "jquery": "3.4.1",
+    "popper.js": "1.16.0",
+    "node-sass": "4.13.0",
+    "react-bootstrap": "1.4.0",
+    "react-router-dom": "5.2.0"
+  },
+  "devDependencies": {
+    "@types/react-router-dom": "5.1.6",
+    "json-server": "0.16.3"
   },
   "scripts": {
+    "server": "json-server --watch --no-cors --port 4000 server/server.json",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
